# Devops-MCP-SERVER

./: .env.example  .gitignore  README.md  app.py  auth.py  brower_mcp.json  jobs.py  k8s_client.py  main.py  metrics.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: call-deploy-api.yml
assets/: cluster_state.txt
tools/: deploy.py  logs.py  rollback.py
