[project]
name = "mcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "kubernetes>=35.0.0",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.27.1",
    "mcp-use>=1.7.0",
    "uvicorn>=0.46.0",
]
