[project]
name = "mcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "kubernetes>=35.0.0",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.27.1",
    "mcp-use>=1.7.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
